--- a/app/views/spree/products/recently_viewed.html.erb
+++ b/app/views/spree/products/recently_viewed.html.erb
@@ -1,11 +1,83 @@
-<% if cached_recently_viewed_products.any? %>
-  <div id="recently_viewed" class="mt-4" data-hook>
-    <h3 class="product-section-title"><%= Spree.t(:recently_viewed_products) %></h3>
+<%# if cached_recently_viewed_products.any? %>
+  <!-- <div id="recently_viewed" class="mt-4" data-hook>
+    <h3 class="product-section-title"><%#= Spree.t(:recently_viewed_products) %></h3>
 
     <ul id="recently_viewed_products" class="list-group">
-      <% cached_recently_viewed_products.each do |product| %>
-        <li class="list-group-item"><%= link_to product.name, product %></li>
-      <% end %>
+      <%# cached_recently_viewed_products.each do |product| %>
+        <li class="list-group-item"><%#= link_to product.name, product %></li>
+      <%# end %>
     </ul>
+  </div> -->
+<%# end %>
+
+<% if cached_recently_viewed_products.any? %>
+  <div class="bg-white">
+    <div class="row mt-6 no-gutters">
+      <div class="col-xl-2 tablet-hide"></div>
+      <div class="col-xl-6 col-lg-8">
+        <ul class="nav nav-tabs" role="tablist">
+          <li class="nav-item" role="presentation"><a class="nav-link active" data-toggle="tab" href="#recently-viewed-products-wrap"><%= Spree.t(:recently_viewed_products) %></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="tab-content">
+      <div class="tab-pane fade show active" id="recently-viewed-products-wrap" role="tabpanel">
+        <div class="row no-gutters">
+          <div class="col-lg-12">
+            <div class="slider-wrapper position-relative">
+              <ul id="recently-viewed-products" class="ontent-slider">
+                <% cached_recently_viewed_products.each do |product| %>
+                  <%= render 'spree/products/product', product: product, image_class: 'product-component-plp-image' %>
+                <% end %>
+              </ul>
+            </div>
+          </div>
+          <div class="col-lg-2"></div>
+        </div>
+      </div>
+    </div>
   </div>
 <% end %>
+
+<script>
+  $(document).ready(function() {
+    $('#recently-viewed-products').lightSlider({
+        item: 6,
+        loop: false,
+        slideMove: 1,
+        easing: 'cubic-bezier(0.25, 0, 0.25, 1)',
+        speed: 600,
+    slideMargin: 120,
+    enableTouch: true,
+    pager: false,
+    onSliderLoad: function (el) {
+      var parent = el.parent();
+      var action = parent.find('.lSAction');
+      action.insertBefore(parent);
+      },
+        responsive : [
+        {
+          breakpoint:1199,
+          settings: {
+            slideMargin: 40,
+          }
+        },
+        {
+          breakpoint:991,
+          settings: {
+            item:2,
+            slideMove:1,
+            slideMargin: 30
+          }
+        },
+        {
+          breakpoint:575,
+          settings: {
+            item:1,
+            slideMargin:20
+          }
+        }
+      ]
+    });
+  });
+</script> 
