--- a/app/views/spree/shared/_add_recently_viewed_products.html.erb
+++ b/app/views/spree/shared/_add_recently_viewed_products.html.erb
@@ -1,6 +1,10 @@
 <div id="recently_viewed_container" data-hook></div>
 <script>
   $(document).ready(function(){
-    Spree.fetch_recently_viewed_products('<%= @product.try(:id) %>');
+    $.ajax({
+      url: Spree.pathFor("recently_viewed_products?product_id=" + <%= @product.id %>),
+      success: (data) =>
+        $("#recently_viewed_container").html(data)
+    })
   });
 </script>
