--- a/app/views/spree/shared/_add_recently_viewed_products.html.erb
+++ b/app/views/spree/shared/_add_recently_viewed_products.html.erb
@@ -1,8 +1,8 @@
-<div id="recently_viewed_container" data-hook></div>
+<div id="recently_viewed_container" class="recently_viewed_products_container" data-hook></div>
 <script>
   $(document).ready(function(){
     $.ajax({
-      url: Spree.pathFor("recently_viewed_products?product_id=" + <%= @product.id %>),
+      url: Spree.pathFor("product_recently_viewed?product_id=" + <%= @product.id %>),
       success: (data) =>
         $("#recently_viewed_container").html(data)
     })
