fix recently viewed issues

--- a/app/views/spree/recently_viewed_products/index.html.erb
+++ b/app/views/spree/recently_viewed_products/index.html.erb
@@ -13,7 +13,7 @@
         <%= render partial: 'filters' %>
         <%= render partial: 'mobile_filters' %>
         <% if @recently_viewed_products.present? %>
-          <%= render 'spree/shared/products', products: @recently_viewed_products %>
+          <%= render 'products', products: @recently_viewed_products %>
         <% end %>
       </div>
       <% if @recently_viewed_products.present? %>
