--- a/app/views/spree/shared/_add_recently_viewed_products.html.erb
+++ b/app/views/spree/shared/_add_recently_viewed_products.html.erb
@@ -1,6 +1,6 @@
 <div id="recently_viewed_container" class="recently_viewed_products_container" data-hook></div>
 <script>
-  $(document).ready(function(){
+  $( document ).on('turbolinks:load', function() {
     $.ajax({
       url: Spree.pathFor("product_recently_viewed?product_id=" + <%= @product.id %>),
       success: (data) =>
