--- a/app/views/spree/products/home_products.html.erb
+++ b/app/views/spree/products/home_products.html.erb
@@ -34,7 +34,7 @@
                               <% end %> 
                             </div>
                           </div>
-                          <div class="product-desc"><% if product&.sale_prices&.active&.present? %><span class="ending-badge"><%= display_highest_discount_percent(product) %></span><% end %>
+                          <div class="product-desc"><% if product&.sale_prices&.active&.present? %><span class="ending-badge"><%#= display_highest_discount_percent(product) %>New Low Pricing</span><% end %>
                             <div class="product-desc-title"><%= product.name %></div>
                           </div>
                         <% end %>
